--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "core-js": "^3.1.2",
+    "firebase": "^7.2.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuefire": "^2.2.0-alpha.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
